# Fantasy-Baseball-AI-System

./: .gitignore  Cargo.toml  README.md  SKILL.md  bootstrap.py  config.toml.example  data_client.py  eval_runner.py  pybaseball_shim.py  python_orchestrator.py
evals/: Future Predictor Eval.md  GM Eval.md  Matchup Eval.md  Roster Management Eval.md  Trend Analyzer Eval.md  eval_report_20260704.json
skills/: Future Predictor.md  GM Skill.md  Matchup Skill.md  Roster Management.md  Trend Analyzer Skill .md
src/: main.rs
