[package]
name = "fantasy_ingest_full"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
polars = { version = "0.46", features = ["parquet", "lazy", "csv"] }
chrono = "0.4"
oauth2 = "4"
anyhow = "1"
urlencoding = "2"